# vuejs_tryouts

./: LICENSE  README.md  docker-compose-localdb-preloaded.yml
backend/: .gitignore  README.md  backend.code-workspace  pyproject.toml  setup.cfg
backend/scripts/vscode/: runonsave.sh
docker/local/: neo4j.env
frontend/: .gitignore  README.md  contribution_guidelines.md  frontend.code-workspace  package-lock.json  package.json  tsconfig.json
frontend/src/components/: HelloWorld.vue
frontend/tests/unit/: example.spec.ts
