[tool.black]
line-length = 100
target-version = ['py38']

[tool.poetry]
authors = ["Girish Pasupathy"]
description = "Web application backend implemented using python and fastapi"
name = "Fastapi Webapp Backend"
version = "0.1.0"

[tool.poetry.dependencies]
Jinja2 = "^2.11.3"
SQLAlchemy = "^1.4.8"
alembic = "^1.5.8"
fastapi = "^0.63.0"
gunicorn = "^20.1.0"
pydantic = "^1.8.1"
python = "^3.8"
requests = "^2.25.1"
uvicorn = "^0.13.4"
py2neo = "^2021.0.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.8.4"
ipykernel = "^5.3.4"
isort = "^5.6.4"
mypy = "^0.790"
pydocstyle = "^5.1.1"
pytest = "^6.1.2"
pyupgrade = "^2.7.4"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.11.1"
ipython = "^7.22.0"
jupyter = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
